# Speed-Charm-Event-Language-Development-Game-Scripting-Language-

./: CMakeLists.txt  LICENSE  README.md  app_1.c  c_header_helper.hint  macro_inf.hint  proc_os_system.c  proc_os_system.h  sc_event_language.h  sce_ast_debug.h  sce_debug_handling.h  sce_helper.h  sce_ir.c  sce_ir.h  sce_ir_debug.h  sce_lexer.c  sce_lexer.h  sce_parser.c  sce_parser.h  sce_run.c  sce_run.h  sce_system_call.h  test.sce  transfer_test_functions.h
std_ext/: ext_alloc.c  ext_alloc.h  ext_c.hint  ext_strs.c  ext_strs.h
